src/main/java/com/sample/sampleservice/shared/error/package-info.java
package com.sample.sampleservice.shared.error;

